--- a/templates/browse.html
+++ b/templates/browse.html
@@ -12,35 +12,36 @@
     <!-- Filters -->
     <div class="browse-filters">
         <div class="filter-group">
-            <label class="filter-label">Category</label>
+            <label class="filter-label">Type</label>
             <div class="filter-buttons">
-                <a href="../browse/" class="filter-chip {% if category == 'all' %}active{% endif %}">All</a>
-                <a href="../browse/category-jerseys/" class="filter-chip {% if category == 'jerseys' %}active{% endif %}">Jerseys</a>
-                <a href="../browse/category-hardware/" class="filter-chip {% if category == 'hardware' %}active{% endif %}">Hardware</a>
-                <a href="../browse/category-signatures/" class="filter-chip {% if category == 'signatures' %}active{% endif %}">Signatures</a>
+                <a href="{{ base_path }}browse/" class="filter-chip {% if item_type == 'all' %}active{% endif %}">All</a>
+                <a href="{{ base_path }}browse/type-jersey/" class="filter-chip {% if item_type == 'jersey' %}active{% endif %}">Jerseys</a>
+                <a href="{{ base_path }}browse/type-hardware/" class="filter-chip {% if item_type == 'hardware' %}active{% endif %}">Hardware</a>
+                <a href="{{ base_path }}browse/type-peripheral/" class="filter-chip {% if item_type == 'peripheral' %}active{% endif %}">Peripherals</a>
+                <a href="{{ base_path }}browse/type-signature/" class="filter-chip {% if item_type == 'signature' %}active{% endif %}">Signatures</a>
             </div>
         </div>
         
         <div class="filter-group">
-            <label class="filter-label">Esport</label>
+            <label class="filter-label">Game</label>
             <div class="filter-buttons">
-                <a href="../browse/" class="filter-chip {% if esport == 'all' %}active{% endif %}">All</a>
-                <a href="../browse/esport-cod/" class="filter-chip {% if esport == 'cod' %}active{% endif %}">CoD</a>
-                <a href="../browse/esport-halo/" class="filter-chip {% if esport == 'halo' %}active{% endif %}">Halo</a>
-                <a href="../browse/esport-cs/" class="filter-chip {% if esport == 'cs' %}active{% endif %}">CS</a>
-                <a href="../browse/esport-valorant/" class="filter-chip {% if esport == 'valorant' %}active{% endif %}">Valorant</a>
-                <a href="../browse/esport-lol/" class="filter-chip {% if esport == 'lol' %}active{% endif %}">LoL</a>
-                <a href="../browse/esport-rl/" class="filter-chip {% if esport == 'rl' %}active{% endif %}">RL</a>
+                <a href="{{ base_path }}browse/" class="filter-chip {% if game == 'all' %}active{% endif %}">All</a>
+                <a href="{{ base_path }}browse/game-call-of-duty/" class="filter-chip {% if game == 'Call of Duty' %}active{% endif %}">CoD</a>
+                <a href="{{ base_path }}browse/game-halo/" class="filter-chip {% if game == 'Halo' %}active{% endif %}">Halo</a>
+                <a href="{{ base_path }}browse/game-counter-strike/" class="filter-chip {% if game == 'Counter-Strike' %}active{% endif %}">CS</a>
+                <a href="{{ base_path }}browse/game-valorant/" class="filter-chip {% if game == 'Valorant' %}active{% endif %}">Valorant</a>
+                <a href="{{ base_path }}browse/game-league-of-legends/" class="filter-chip {% if game == 'League of Legends' %}active{% endif %}">LoL</a>
+                <a href="{{ base_path }}browse/game-rocket-league/" class="filter-chip {% if game == 'Rocket League' %}active{% endif %}">RL</a>
             </div>
         </div>
         
         <div class="filter-group">
             <label class="filter-label">Era</label>
             <div class="filter-buttons">
-                <a href="../browse/" class="filter-chip {% if era == 'all' %}active{% endif %}">All Eras</a>
-                <a href="../browse/era-golden/" class="filter-chip {% if era == 'golden' %}active{% endif %}">Golden Age (≤2015)</a>
-                <a href="../browse/era-global/" class="filter-chip {% if era == 'global' %}active{% endif %}">Global Era (2016-2020)</a>
-                <a href="../browse/era-modern/" class="filter-chip {% if era == 'modern' %}active{% endif %}">Modern (2021+)</a>
+                <a href="{{ base_path }}browse/" class="filter-chip {% if era == 'all' %}active{% endif %}">All Eras</a>
+                <a href="{{ base_path }}browse/era-golden/" class="filter-chip {% if era == 'golden' %}active{% endif %}">Golden Age (≤2015)</a>
+                <a href="{{ base_path }}browse/era-global/" class="filter-chip {% if era == 'global' %}active{% endif %}">Global Era (2016-2020)</a>
+                <a href="{{ base_path }}browse/era-modern/" class="filter-chip {% if era == 'modern' %}active{% endif %}">Modern (2021+)</a>
             </div>
         </div>
     </div>
