--- a/templates/base.html
+++ b/templates/base.html
@@ -107,10 +107,10 @@
                 <div class="sponsor-logos">
                     {% block sponsors %}
                     <div class="sponsor-logo">
-                        <img src="{{ base_path }}static/images/sponsor-placeholder.svg" alt="Sponsor 1">
+                        <img src="https://lh3.googleusercontent.com/d/1M-LPm1ZCXnRmWZfP48tCRuYZXhuB-Jgy" alt="Collectors Envy">
                     </div>
                     <div class="sponsor-logo">
-                        <img src="{{ base_path }}static/images/sponsor-placeholder.svg" alt="Sponsor 2">
+                        <img src="https://lh3.googleusercontent.com/d/17bK6_VvoHgP0rnpGt6XC26kHZbYhXDw8" alt="Project Esports">
                     </div>
                     <div class="sponsor-logo">
                         <img src="{{ base_path }}static/images/sponsor-placeholder.svg" alt="Sponsor 3">
